Change path for css and js

--- a/dsmain.html
+++ b/dsmain.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark Souls — Avilla Hanya</title>
     <link rel="icon" type="image/x-icon" href="/Images/ds_favicon.png" />
-    <link rel="stylesheet" href="style_ds.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="/Pages/style_ds.css" />
+    <script src="/Pages/script.js"></script>
   </head>
 
   <body>
