--- a/quiz.html
+++ b/quiz.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Hidden Quiz?</title>
     <link rel="icon" type="image/x-icon" href="/Images/lark_favicon.png" />
-    <link rel="stylesheet" href="style_quiz.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="/Pages/style_quiz.css" />
+    <script src="/Pages/script.js"></script>
   </head>
 
   <body>
