--- a/nrmain.html
+++ b/nrmain.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nightreign — Avilla Hanya</title>
     <link rel="icon" type="image/x-icon" href="/Images/lark_favicon.png">
-    <link rel="stylesheet" href="style_nr.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="/Pages/style_nr.css" />
+    <script src="/Pages/script.js"></script>
   </head>
 
   <body>
