Further attempts to fix path for CSS and JS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Avilla Hanya</title>
-    <link rel="icon" type="image/x-icon" href="/Images/lark_favicon.png">
-    <link rel="stylesheet" href="/Pages/style.css" />
-    <script src="/Pages/script.js"></script>
+    <link rel="icon" type="image/x-icon" href="Images/lark_favicon.png">
+    <link rel="stylesheet" href="Pages/style.css" />
+    <script src="Pages/script.js"></script>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
       <span onclick="openNav()">&#9776;</span>
       <main>
         <section class="logoHeader">
-          <a href="quiz.html"><img src="/Images/avillahanya_logo_er.png" /></a>
+          <a href="quiz.html"><img src="Images/avillahanya_logo_er.png" /></a>
         </section>
         <h1>Homepage</h1>
         <section class="textBox">
