--- a/dsmain.html
+++ b/dsmain.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark Souls — Avilla Hanya</title>
-    <link rel="icon" type="image/x-icon" href="/Images/ds_favicon.png" />
-    <link rel="stylesheet" href="/Pages/style_ds.css" />
-    <script src="/Pages/script.js"></script>
+    <link rel="icon" type="image/x-icon" href="Images/ds_favicon.png" />
+    <link rel="stylesheet" href="Pages/style_ds.css" />
+    <script src="Pages/script.js"></script>
   </head>
 
   <body>
@@ -22,7 +22,7 @@
       <span onclick="openNav()">&#9776;</span>
       <main>
         <section class="logoHeader">
-          <img src="/Images/avillahanya_logo_ds.png" />
+          <img src="Images/avillahanya_logo_ds.png" />
         </section>
         <h1>Dark Souls</h1>
         <section class="textBox">
