--- a/ermain.html
+++ b/ermain.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elden Ring — Avilla Hanya</title>
-    <link rel="icon" type="image/x-icon" href="/Images/lark_favicon.png">
-    <link rel="stylesheet" href="/Pages/style.css" />
-    <script src="/Pages/script.js"></script>
+    <link rel="icon" type="image/x-icon" href="Images/lark_favicon.png">
+    <link rel="stylesheet" href="Pages/style.css" />
+    <script src="Pages/script.js"></script>
   </head>
 
   <body>
@@ -22,7 +22,7 @@
       <span onclick="openNav()">&#9776;</span>
       <main>
         <section class="logoHeader">
-          <img src="/Images/avillahanya_logo_er.png" />
+          <img src="Images/avillahanya_logo_er.png" />
         </section>
       <h1>Elden Ring</h1>
         <section class="textBox">
