--- a/quiz.html
+++ b/quiz.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Hidden Quiz?</title>
-    <link rel="icon" type="image/x-icon" href="/Images/lark_favicon.png" />
-    <link rel="stylesheet" href="/Pages/style_quiz.css" />
-    <script src="/Pages/script.js"></script>
+    <link rel="icon" type="image/x-icon" href="Images/lark_favicon.png" />
+    <link rel="stylesheet" href="Pages/style_quiz.css" />
+    <script src="Pages/script.js"></script>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
       <span onclick="openNav()">&#9776;</span>
       <main>
         <section class="logoHeader">
-          <img src="/Images/avillahanya_logo_er.png" />
+          <img src="Images/avillahanya_logo_er.png" />
         </section>
         <h1>You Found A Quiz!</h1>
         <section class="quizBox">
