Add some quiz styling

--- a/ermain.html
+++ b/ermain.html
@@ -21,9 +21,9 @@
       </section>
       <span onclick="openNav()">&#9776;</span>
       <main>
-        <section class="logoHeader">
+        <header class="logoHeader">
           <img src="Images/avillahanya_logo_er.png" />
-        </section>
+        </header>
       <h1>Elden Ring</h1>
         <section class="textBox">
             <p>
