--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </section>
       <span onclick="openNav()">&#9776;</span>
       <main>
-        <section class="logoHeader">
+        <header class="logoHeader">
           <a href="quiz.html"><img src="Images/avillahanya_logo_er.png" /></a>
-        </section>
+        </header>
         <h1>Homepage</h1>
         <section class="textBox">
           <h2>About this website</h2>
