--- a/optimiser.html
+++ b/optimiser.html
@@ -21,7 +21,9 @@
       </section>
       <span onclick="openNav()">&#9776;</span>
       <main>
+      <header>
       <h1>Class Optimiser</h1>
+      </header>
         <section class="textBox">
           <h2>About this website</h2>
             <p>
