--- a/quiz.html
+++ b/quiz.html
@@ -23,15 +23,15 @@
       </section>
       <span onclick="openNav()">&#9776;</span>
       <main>
-        <section class="logoHeader">
+        <header class="logoHeader">
           <img src="Images/avillahanya_logo_er.png" />
-        </section>
+        </header>
         <h1>You Found A Quiz!</h1>
         <section class="quizBox">
           <form name="quiz">
             <label for="name">Name: </label
             ><input type="text" name="name" maxlength="20" size="20" />
-            <ol>
+            <ul>
               <li>
                 <p>
                   Which Dark Souls character was a member of the Chaos Servants?
@@ -84,7 +84,7 @@
                 <input type="radio" name="moonveil" value="recluse" />
                 <label for="recluse">Recluse</label><br />
               </li>
-            </ol>
+            </ul>
           </form>
           <button type="button" onclick="checkAnswers()">Submit Answers</button>
         </section>
