--- a/dsmain.html
+++ b/dsmain.html
@@ -21,9 +21,9 @@
       </section>
       <span onclick="openNav()">&#9776;</span>
       <main>
-        <section class="logoHeader">
+        <header class="logoHeader">
           <img src="Images/avillahanya_logo_ds.png" />
-        </section>
+        </header>
         <h1>Dark Souls</h1>
         <section class="textBox">
           <h2>About this website</h2>
