Add main text to dsmain

--- a/dsmain.html
+++ b/dsmain.html
@@ -26,10 +26,15 @@
         </header>
         <h1>Dark Souls</h1>
         <section class="textBox">
-          <h2>About this website</h2>
           <p>
-            This is a place I have set up as an informative repository for
-            everything I like. Feel free to browse if you're interested.
+            DARK SOULS is a 2011 action RPG developed by From Software. It is a spiritual successor to their 2009 release Demon's Souls and the studio's second RPG to be directed by <a href="https://en.wikipedia.org/wiki/Hidetaka_Miyazaki">Hidetaka Miyazaki</a>.
+          </p>
+          <h3><i>"In the Age of Ancients, the world was unformed..."</i></h3>
+          <p>
+            In the beginning, the world of DARK SOULS was an unchanging grey stone wasteland, inhabited only by towering Archtrees and the immortal Everlasting Dragons. Then, in a sudden flash, there was fire, and with it brought elements of disparity to the world - heat and cold, life and death, and finally light and Dark.
+          </p>
+          <p>
+            From that Dark came humanity, and within that First Flame they found the souls of Lords, granting them divine power: Gravelord Nito, first of the dead, the Witch of Izalith
           </p>
         </section>
       </main>
