--- a/ermain.html
+++ b/ermain.html
@@ -27,7 +27,7 @@
       <h1>Elden Ring</h1>
         <section class="textBox">
             <p>
-            ELDEN RING is a sprawling open world action RPG developed by From Software. It was directed by <a href="https://en.wikipedia.org/wiki/Hidetaka_Miyazaki">Hidetaka Miyazaki</a>, known primarily for his work on the <a href="dsmain.html">DARK SOULS</a> series. For ELDEN RING, the studio also collaborated with renowned author <a href="https://en.wikipedia.org/wiki/George_R._R._Martin">George R. R. Martin</a>, famous for his "A Song Of Ice And Fire" series of novels, and he is responsible for the worldbuilding and lore.
+            ELDEN RING is a sprawling open world action RPG developed by From Software and released in 2022. It was directed by <a href="https://en.wikipedia.org/wiki/Hidetaka_Miyazaki">Hidetaka Miyazaki</a>, known primarily for his work on the <a href="dsmain.html">DARK SOULS</a> series. For ELDEN RING, the studio also collaborated with renowned author <a href="https://en.wikipedia.org/wiki/George_R._R._Martin">George R. R. Martin</a>, famous for his "A Song Of Ice And Fire" series of novels, and he is responsible for the worldbuilding and lore.
             </p>
             <p>
             Following a catastrophic war between the demigods that rule the Lands Between, it falls to a Tarnished warrior to claim the Elden Ring and restore order to the land. 
