--- a/dsmain.html
+++ b/dsmain.html
@@ -34,7 +34,10 @@
             In the beginning, the world of DARK SOULS was an unchanging grey stone wasteland, inhabited only by towering Archtrees and the immortal Everlasting Dragons. Then, in a sudden flash, there was fire, and with it brought elements of disparity to the world - heat and cold, life and death, and finally light and Dark.
           </p>
           <p>
-            From that Dark came humanity, and within that First Flame they found the souls of Lords, granting them divine power: Gravelord Nito, first of the dead, the Witch of Izalith
+            From that Dark came humanity, and within that First Flame they found the souls of Lords, granting them divine power: Gravelord Nito, first of the dead, the Witch of Izalith, and Gwyn, Lord of Sunlight. This power allowed the new Gods of the world to wage war against their stony rulers, burning their homes, crushing their scales and spreading disease among their populace.
+          </p>
+          <p>
+            Thus began an era of prosperity known as the Age of Fire, ruled over by the Great Lord Gwyn and catalyzed by the First Flame. But as all fires do, the Flame begins to fade, and Gwyn's rule enters its twilight.
           </p>
         </section>
       </main>
