Add main text to ermain, nrmain and adjust sidenav javascript

--- a/nrmain.html
+++ b/nrmain.html
@@ -26,11 +26,14 @@
         </header>
       <h1>Elden Ring Nightreign</h1>
         <section class="textBox">
-          <h2>About this website</h2>
             <p>
-            This is a place I have set up as an informative repository for
-            everything I like. Feel free to browse if you're interested.
+            ELDEN RING NIGHTREIGN is a fast-paced, multiplayer-focused spinoff set in the world of <a href="ermain.html">ELDEN RING</a>. Released in 2025, it is the directorial debut of veteran From Software design lead Junya Ishizaki. NIGHTREIGN takes elements of many other genres, such as a roguelike gameplay loop, a battle royale style map with a shrinking circle, and the action RPG combat of its parent game.
             </p>
+            <h3><i>"That is the Night's origin, and enemy to this world."</i></h3>
+            <p>
+            In an alternate timeline to the original game, The Shattering was interrupted by a spreading natural disaster known as the Night. Characterised by an azure gloom and endless rains, it crept across the land, corrupting and consuming everything in its path. Some creatures, touched by the Night, gained a twisted strength, and became known as Nightlords.
+            </p>
+            
         </section>
       </main>
         <footer>
