--- a/ermain.html
+++ b/ermain.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elden Ring — Avilla Hanya</title>
-    <link rel="icon" type="image/x-icon" href="Images/lark_favicon.png">
+    <link rel="icon" type="image/x-icon" href="Images/lark_favicon.png" />
     <link rel="stylesheet" href="Pages/style.css" />
     <script src="Pages/script.js"></script>
   </head>
@@ -12,7 +12,9 @@
   <body>
     <section id="main">
       <section id="sideNav" class="sideNav">
-        <a href="javascript:void(0)" class="closeButton" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closeButton" onclick="closeNav()"
+          >&times;</a
+        >
         <a href="index.html">Home</a>
         <a href="dsmain.html">Dark Souls</a>
         <a href="ermain.html">Elden Ring</a>
@@ -24,17 +26,40 @@
         <header class="logoHeader">
           <img src="Images/avillahanya_logo_er.png" />
         </header>
-      <h1>Elden Ring</h1>
+        <h1>Elden Ring</h1>
         <section class="textBox">
-            <p>
-            ELDEN RING is a sprawling open world action RPG developed by From Software and released in 2022. It was directed by <a href="https://en.wikipedia.org/wiki/Hidetaka_Miyazaki">Hidetaka Miyazaki</a>, known primarily for his work on the <a href="dsmain.html">DARK SOULS</a> series. For ELDEN RING, the studio also collaborated with renowned author <a href="https://en.wikipedia.org/wiki/George_R._R._Martin">George R. R. Martin</a>, famous for his "A Song Of Ice And Fire" series of novels, and he is responsible for the worldbuilding and lore.
-            </p>
-            <p>
-            Following a catastrophic war between the demigods that rule the Lands Between, it falls to a Tarnished warrior to claim the Elden Ring and restore order to the land. 
-            </p>
+          <p>
+            ELDEN RING is a sprawling open world action RPG developed by From
+            Software and released in 2022. It was directed by
+            <a href="https://en.wikipedia.org/wiki/Hidetaka_Miyazaki"
+              >Hidetaka Miyazaki</a
+            >, known primarily for his work on the
+            <a href="dsmain.html">DARK SOULS</a> series. For ELDEN RING, the
+            studio also collaborated with renowned author
+            <a href="https://en.wikipedia.org/wiki/George_R._R._Martin"
+              >George R. R. Martin</a
+            >, famous for his "A Song Of Ice And Fire" series of novels, and he
+            is responsible for the worldbuilding and lore.
+          </p>
+          <h3><i>"The fallen leaves tell a story..."</i></h3>
+          <p>
+            In the Lands Between, on a fateful night, the demigod Godwyn the
+            Golden was murdered in a plot known as the Night of the Black
+            Knives. Soon after, Queen Marika shattered the Elden Ring, and her
+            remaining demigod children vied for power, fighting over the
+            remaining shards of the Elden Ring.
+          </p>
+          <p>
+            Their newfound power led to a terrible war known as The Shattering,
+            an endless war with no victor. Queen Marika has vanished, and the
+            land, now godless, has been abandoned by the Greater Will. It is
+            here that the game begins, with the traces of a once-lost grace
+            raising the Tarnished inhabitants from their graves to mend the
+            Elden Ring, and restore Order to the Lands Between.
+          </p>
         </section>
       </main>
-        <footer>
+      <footer>
         <p class="footerDisc">
           This site is an independent resource dedicated to the DARK SOULS and
           ELDEN RING games. It is not affiliated with, endorsed by, or
