add page for partisan

--- a/ermain.html
+++ b/ermain.html
@@ -58,6 +58,13 @@
             Elden Ring, and restore Order to the Lands Between.
           </p>
         </section>
+        <ul class="subNav">
+          <li><a href="partisan.html">Weapons</a></li>
+          <li><a href="index.html">Armour</a></li>
+          <li><a href="index.html">Items</a></li>
+          <li><a href="index.html">Characters</a></li>
+          <li><a href="index.html">Enemies</a></li>
+        </ul>
       </main>
       <footer>
         <p class="footerDisc">
