add weapon upgrade table

--- a/partisan.html
+++ b/partisan.html
@@ -49,19 +49,302 @@
             <li>Mausoleum Knights</li>
           </ul>
         </p>
-        <h2>Upgrades and Infusions</h2>
-        <table>
-          <tr>
-            <th></th>
-            <th>Damage</th>
-            <th>Scaling</th>
-            <th>Status</th>
-            <th>Guard Capacity</th>
-          </tr>
-        </table>
         <p>
         It is recommended to farm this item at the Bellum Church grace in Northern Liurnia. There are several mounted Cuckoo Knights patrolling the woods near the church, and all of them wield the Partisan.
         </p>
+        <h2>Upgrades and Infusions</h2>
+        <p>
+          All values are for a +25 weapon.
+        </p>
+        <table>
+          <tr>
+            <th></th>
+            <th colspan="5">Base Damage</th>
+            <th colspan="5">Scaling</th>
+            <th colspan="1">Status</th>
+            <th colspan="6">Guard Capacity</th>
+          </tr>
+          <tr>
+            <td>Partisan</td>
+            <td>Phys</td>
+            <td>Mag</td>
+            <td>Fir</td>
+            <td>Lit</td>
+            <td>Hol</td>
+            <td>Str</td>
+            <td>Dex</td>
+            <td>Int</td>
+            <td>Fth</td>
+            <td>Arc</td>
+            <td></td>
+            <td>Phys</td>
+            <td>Mag</td>
+            <td>Fir</td>
+            <td>Lit</td>
+            <td>Hol</td>
+            <td>Sta</td>
+          </tr>
+          <tr>
+            <td>Std</td>
+            <td>301</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>C(61)</td>
+            <td>D(43)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>48</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>43</td>
+          </tr>
+          <tr>
+            <td>Hvy</td>
+            <td>277</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>B(117)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>48</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>40</td>
+          </tr>
+          <tr>
+            <td>Keen</td>
+            <td>277</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>E(18)</td>
+            <td>B(103)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>48</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>40</td>
+          </tr>
+          <tr>
+            <td>Qua</td>
+            <td>241</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>B(93)</td>
+            <td>B(93)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>48</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>40</td>
+          </tr>
+          <tr>
+            <td>Fir</td>
+            <td>200</td>
+            <td>-</td>
+            <td>200</td>
+            <td>-</td>
+            <td>-</td>
+            <td>D(58)</td>
+            <td>E(8)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>46</td>
+            <td>29</td>
+            <td>38</td>
+            <td>35</td>
+            <td>29</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <td>Fla</td>
+            <td>236</td>
+            <td>-</td>
+            <td>236</td>
+            <td>-</td>
+            <td>-</td>
+            <td>E(14)</td>
+            <td>E(9)</td>
+            <td>-</td>
+            <td>C(71)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>46</td>
+            <td>29</td>
+            <td>38</td>
+            <td>35</td>
+            <td>29</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <td>Lit</td>
+            <td>205</td>
+            <td>-</td>
+            <td>-</td>
+            <td>205</td>
+            <td>-</td>
+            <td>E(8)</td>
+            <td>E(58)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>46</td>
+            <td>29</td>
+            <td>35</td>
+            <td>38</td>
+            <td>29</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <td>Sac</td>
+            <td>236</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>236</td>
+            <td>E(14)</td>
+            <td>E(9)</td>
+            <td>-</td>
+            <td>C(71)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>46</td>
+            <td>35</td>
+            <td>29</td>
+            <td>29</td>
+            <td>38</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <td>Mag</td>
+            <td>236</td>
+            <td>236</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>E(10)</td>
+            <td>E(6)</td>
+            <td>C(72)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>46</td>
+            <td>38</td>
+            <td>29</td>
+            <td>29</td>
+            <td>35</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <td>Col</td>
+            <td>212</td>
+            <td>169</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>C(68)</td>
+            <td>D(49)</td>
+            <td>C(60)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>Frostbite (105)</td>
+            <td>46</td>
+            <td>35</td>
+            <td>29</td>
+            <td>29</td>
+            <td>29</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <td>Poi</td>
+            <td>253</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>C(68)</td>
+            <td>D(49)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>D(43)</td>
+            <td>Poison (95)</td>
+            <td>46</td>
+            <td>29</td>
+            <td>29</td>
+            <td>29</td>
+            <td>29</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <td>Bld</td>
+            <td>253</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>C(68)</td>
+            <td>D(49)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>D(43)</td>
+            <td>Hemorrhage (82)</td>
+            <td>46</td>
+            <td>29</td>
+            <td>29</td>
+            <td>29</td>
+            <td>29</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <td>Occ</td>
+            <td>265</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>E(24)</td>
+            <td>E(16)</td>
+            <td>-</td>
+            <td>-</td>
+            <td>B(106)</td>
+            <td>-</td>
+            <td>48</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>30</td>
+            <td>40</td>
+          </tr>
+        </table>
       </main>
       <footer>
         <p class="footerDisc">
