Add nightfarer's page

--- a/nrmain.html
+++ b/nrmain.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nightreign — Avilla Hanya</title>
+    <title>Nightreign - Avilla Hanya</title>
     <link rel="icon" type="image/x-icon" href="Images/lark_favicon.png">
     <link rel="stylesheet" href="Pages/style_nr.css" />
     <script src="Pages/script.js"></script>
@@ -35,6 +35,13 @@
             </p>
             
         </section>
+        <ul class="subNav">
+          <li><a href="index.html">Weapons</a></li>
+          <li><a href="index.html">Armour</a></li>
+          <li><a href="index.html">Items</a></li>
+          <li><a href="wylder.html">Characters</a></li>
+          <li><a href="index.html">Enemies</a></li>
+        </ul>
       </main>
         <footer>
         <p class="footerDisc">
