--- a/dsmain.html
+++ b/dsmain.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dark Souls — Avilla Hanya</title>
+    <title>Dark Souls - Avilla Hanya</title>
     <link rel="icon" type="image/x-icon" href="Images/ds_favicon.png" />
     <link rel="stylesheet" href="Pages/style_ds.css" />
     <script src="Pages/script.js"></script>
