--- a/partisan.html
+++ b/partisan.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avilla Hanya</title>
+    <title>Partisan - Avilla Hanya</title>
     <link rel="icon" type="image/x-icon" href="Images/lark_favicon.png">
     <link rel="stylesheet" href="Pages/style_weapon.css" />
     <script src="Pages/script.js"></script>
